--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "import-questions": "tsx scripts/import-questions.ts",
+    "scrape-tips": "tsx scripts/scrape-tips.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.37.0",
@@ -22,10 +24,13 @@
     "@types/react": "^18.3.16",
     "@types/react-dom": "^18.3.5",
     "autoprefixer": "^10.4.20",
+    "cheerio": "^1.0.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.29",
+    "mammoth": "^1.8.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3"
   }
 }
