--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "import-questions": "tsx scripts/import-questions.ts",
-    "scrape-tips": "tsx scripts/scrape-tips.ts"
+    "scrape-tips": "tsx scripts/scrape-tips.ts",
+    "import-tips": "tsx scripts/import-tips-local.ts"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.37.0",
@@ -28,6 +29,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.29",
     "mammoth": "^1.8.0",
+    "pdf-parse": "^2.4.5",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.2",
